[tool.poetry]
name = "jobscout"
version = "0.1.0"
description = "Job hunting"
authors = ["Jay Khan <jaykhan.sound@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.0"
jupyter = "^1.0.0"
ipykernel = "^6.8.0"
pandasql = "^0.7.3"
bs4 = "^0.0.1"
requests = "^2.27.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
